# Kkonnect

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile.dev
requirements/: base.in  base.txt  dev.txt  prod.txt
