[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kkonnect"
version = "0.1.0"
description = "Kkonnect project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pylint]
max-line-length = 88
disable = [
        "C0114",   # missing-module-docstring
            "W1203",   # logging-fstring-interpolation
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
        \.git
          | \.venv
            | build
              | dist
)/
'''

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
)
]